Fixed tigerImg clipping, using overflow:hidden

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -61,7 +61,8 @@ img {
 
     position: relative;
     z-index: 999;
-    clip-path: fill-box;
+    // clip-path: fill-box;
+    
 
 }
 
@@ -105,6 +106,11 @@ img {
 
 /* #region  Bottom container */
 #bottomContainer{
+    //* Only for testing, remove 
+    margin-bottom: 800px;
+
+
+
     width: 100%;
 
     grid-column: 1/13;
@@ -113,9 +119,11 @@ img {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-auto-rows: auto;
-    margin-bottom: 400px;
+    overflow: hidden;
 
     #tigerImg{
+        
+        
         grid-column: 1/6;
         grid-row: 2;
         opacity: 1;
